--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -142,6 +142,8 @@
             box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.3);
             transform: scale(1);
             transition: all 300ms ease-in-out;
+            border-radius: 0.4rem;
+            overflow: hidden;
 
         }
         .recipe-list-item {
@@ -197,5 +199,38 @@
         .recipe-meta-title {
             font-size: 1rem;
         }
+        .recipe-footer a {
+            background: #13141f;
+            display: block;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            padding: 3rem;
+            font-size: 1.2rem;
+            transition: all 300ms ease-in-out;
+        }
+        .recipe-footer a:hover {
+            filter: brightness(2);
+        }
+        .recipe-footer i {
+            margin-right: 0.3rem;
+        }
+        .main-footer {
+            display: flex;
+            align.items: center;
+            justify-content: space-between;
+            background: #13141f;
+            padding: 4rem;
+        }
+        .main-footer a{
+            color: white;
+            text-decoration: none;
+        }
+        .main-footer a:hover {
+            filter: brightness(0.8);
+            transition: all 300ms ease-in-out;
+        }
+
+
     </style>
 </head>
