--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,45 +6,8 @@
 
 <main class="main-content-container">
     <div class="main-content main-content-list container">
-        <div class="recipe recipe-list-item">
-            <div class="recipe-cover">
-                <img src="https://via.placeholder.com/1280x720/269fe6.png" alt="temporario">
-            </div>
-            <div class="recipe-title-container">
-                <h2 class="recipe-title">Doce de batata doce sem doce</h2>
-            </div>
-            <div class="recipe-author">
-                <span class="recipe-author-item"><i class="fas fa-user"></i>Fabio Darad</span>
-                <span class="recipe-author-item"><i class="fas fa-calendar-alt"></i>09/04/2022</span>
-                <a href="">
-                    <span class="recipe-author-item"><i class="fas fa-layer-group"></i>Café da Manhã</span>
-                </a>
-            </div>
-            <div class="recipe-content">
-                <p>Loren ipsum dolor </p>
-            </div>
-            <div class="recipe-meta-container">
-                <div class="recipe-meta recipe-preparation">
-                    <h3 class="recipe-meta-title">
-                        <i class="fas fa-stopwatch"></i>
-                        Preparo
-                    </h3>
-                    <div class="recipe-meta-text">
-                        0 minutos
-                    </div>
-                </div>
-                <div class="recipe-meta recipe-servings">
-                    <h3 class="recipe-meta-title">
-                        <i class="fas fa-pizza-slice"></i>
-                        Porções
-                    </h3>
-                    <div class="recipe-meta-text">
-                        10 porções
-                    </div>
-
-                </div>
-            </div>
-        </div>
+        {% include 'recipes/partials/recipe.html' %}
     </div>
 </main>
+    {% include 'recipes/partials/footer.html' %}
 </body>
